--- a/inspection_srvs/CMakeLists.txt
+++ b/inspection_srvs/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/CaptureImage.srv"
   "srv/MoveToPose.srv"
+  DEPENDENCIES std_msgs geometry_msgs
 )
 
 if(BUILD_TESTING)
