--- a/inspection_srvs/CMakeLists.txt
+++ b/inspection_srvs/CMakeLists.txt
@@ -7,16 +7,14 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/CaptureImage.srv"
   "srv/MoveToPose.srv"
-  DEPENDENCIES std_msgs geometry_msgs
+  DEPENDENCIES geometry_msgs
 )
 
 if(BUILD_TESTING)
