FocusValue message added

--- a/inspection_msgs/CMakeLists.txt
+++ b/inspection_msgs/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/ColorRGBAMultiArray.msg"
   "msg/PixelStrip.msg"
+  "msg/FocusValue.msg"
   DEPENDENCIES std_msgs # Add packages that above messages depend on, in this case geometry_msgs for Sphere.msg
 )
 
