--- a/inspection_srvs/CMakeLists.txt
+++ b/inspection_srvs/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(rosidl_default_generators REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/CaptureImage.srv"
   "srv/MoveToPose.srv"
+  "srv/SetFocusMetric.srv"
   DEPENDENCIES geometry_msgs
 )
 
